Login page is available
page html is working

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,6 +2,7 @@
     <nav>
       <a href="/">Home</a> |
       <a href="/about">About</a>
+      <a href="/login">Login</a>
     </nav>
   </header>
   
